c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/for_decl.c
int main(void) {
    int a = 0;

    for (int i = -100; i <= 0; i = i + 1)
        a = a + 1;
    return a;
}
