c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/invalid_for_declaration.c
int main(void) {
    for (; int i = 0; i = i + 1)
        ;
    return 0;
}